syntax = "proto3";
package helloWorld;

message hellowWorldRequest {};

message helloWorldResponse {
    string returnText = 1;
};

service helloWorldService {
    rpc getHelloWorld (hellowWorldRequest) returns (helloWorldResponse);
}
